--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -39,6 +39,7 @@ $space-md: 10px;
 $space-lg: 15px;
 $space-xl: 20px;
 $space-xxl: 50px;
+$space-xxxl: 80px;
 $col-spacing: 2.5%;
 
 $header-height:2.9rem;
