--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -9,177 +9,198 @@
 
 
 {% block content %}
-<!-- START SECTION 1 -->
-<div class="page vh-95 col-2 col-1-md" id="section-1">
-    <div id="landing-logo-container">
-        <img id="landing-logo" src="{% static 'img/byite-logo-color.svg' %}"/>
-    </div>
-    <div id="landing-text-wrapper">
-        <div>
-            <h1>Take a byite out of something new.</h1>
+<div id="home-content">
+    <!-- START SECTION 1 -->
+    <div class="page vh-95 col-2 col-1-md" id="section-1">
+        <div id="landing-logo-container">
+            <div id="nav-bg-trigger" class="bg-image"></div>
+            <img id="landing-logo" src="{% static 'img/byite-logo-color.svg' %}"/>
         </div>
-        <div>
-            <h5>Full-stack web development, cloud management and more! We leverage the technology that you don't care about, to achieve the results that you do!</h5>
+        <div id="landing-text-wrapper">
+            <div>
+                <h1>Take a byite out of something new.</h1>
+            </div>
+            <div>
+                <h5>Full-stack web development, cloud management and more! We leverage the technology that you don't care about, to achieve the results that you do!</h5>
+            </div>
+            <div>
+                <a class="text-muted" href="#contact-section"><div class="call-to-action">Contact Us!</div></a>
+            </div>
         </div>
-        <div>
-            <div class="call-to-action">Contact Us!</div>
+        <div id="landing-bg-container">
+            <img class="bg-image" src="{% static 'img/landing-blob.svg' %}"/>
         </div>
     </div>
-    <div id="landing-bg-container">
-        <img class="bg-image" src="{% static 'img/landing-blob.svg' %}"/>
+    <!-- END SECTION 1 -->
+
+    <!-- START SECTION 2 -->
+    <div class="page vh-95 flex-start-content-x center-content-y" id="section-2">
+        <div class="relative z-mid w-50 w-100-sm blob-text-left">
+            <h1 class="no-m">What we do</h1>
+            <h5>We're not here to provide cookie cutter solutions. 
+                Your business is unique and the technology powering it should be too.
+                Whether it be a simple website with a focus on conversions, an e-commerce site to increase sales or custom cloud infrastructure to support your business operations, we can do it all.
+            </h5>
+        </div>
+        <img class="bg-image" src="{% static 'img/content-blob.svg' %}"/>
+        <img class="watermark-image" src="{% static 'img/watermarks.svg' %}"/>
     </div>
-</div>
-<!-- END SECTION 1 -->
+    <!-- END SECTION 2 -->
 
-<!-- START SECTION 2 -->
-<div class="page vh-95 flex-start-content-x center-content-y" id="section-2">
-    <div class="relative z-mid w-50 w-100-sm blob-text-left">
-        <h1 class="no-m-t">Technologies</h1>
-        <h4>We specialise in technology. It is our goal to come up with the most creative solutions to your problems, no matter the technical approach!</h4>
+    <!-- FUNNEL -->
+    <div class="page vh-65 p-t-xxl flex-y center-content-y" id="you-section-pre">
+        <div class="text-center">
+            <h1 class="no-m">How we do it</h1>
+            <h5 class="p-xxl">
+                It's hard not to kick goals when everyone is on the same team, thats why it's important for us to get to know you and your business first. 
+                Once we understand your goals, limitations and opportunities, then we can get to work implementing the most effective solution, specifically tailored to your requirements. 
+                If you have an idea, we can impliment it while you can rest easy knowing that we utilize the same technology as some of the biggest companies online today, meaning our solutions are fast, scaleable and secure.
+            </h5>
+            <div>
+                <h4>
+                    It's all a process that all starts with...
+                </h4>
+            </div>
+        </div>
     </div>
-    <img class="bg-image" src="{% static 'img/content-blob.svg' %}"/>
-    <img class="watermark-image" src="{% static 'img/watermarks.svg' %}"/>
-</div>
-<!-- END SECTION 2 -->
 
-<div class="page vh-55 center-content-y" id="section-3-pre">
-    <div class="p-xxl text-center">
-        <h1>Our Mission</h1>
-        <h4>
-            We're not here to provide cookie cutter solutions.
-            If you're serious about growth
-            It comes down to...
-        </h4>
+    <div id="funnel-img-container">
+        <img id="funnel-img" src="{% static 'img/funnel.svg' %}"/>
     </div>
-</div>
+    <!-- END FUNNEL -->
 
-<div id="funnel-img-container">
-    <img id="funnel-img" src="{% static 'img/funnel.svg' %}"/>
-</div>
-
-<!-- START SECTION 3 -->
-<div class="page" id="section-3">
-    <div class="full-width flex-y center-content-y">
-        <h2>You</h2>
+    <!-- START SECTION 3 -->
+    <div class="page vh-65 flex-y center-content-y" id="you-section">
+        <h2 id="you-title">You</h2>
         <img id="person-img" src="{% static 'img/person.svg' %}"/>
-    </div>
-    <div class="text-center p-b-xxl">
-        <h4>
-            You don't operate an average business, and we're not here to provide average, 
-            cookie cutter solutions. If you are serious about growing your business.
-            our mission refelects that, unique solutions for unique businesses
-              We specialise in technology. It is our goal to come up with the most creative solutions to your problems, no matter the technical approach!
+        <h4 class="p-b-xxl text-center">
+            If you're serious about growth and ready to see performance soar while standing out from your competition, all you have to do is take the first step.
         </h4>
     </div>
-</div>
-<!-- END SECTION 3 -->
+    <!-- END SECTION 3 -->
 
 
-<!-- START SECTION 4 -->
-<div class="page full-height" id="section-4">
-    <div class="full-width text-center p-t-xxl" id="projects-title">
-        <h1 class="no-m">Recent Work</h1>
-    </div>
-    <div class="project-cards">
-        {% for project in projects %}
-            {% if forloop.counter|divisibleby:2 %}
-                <div class="project-card">
-                    <div class="project-card-text">
-                        <h2 class="no-m">{{ project.client }}</h2>
-                        <h4 class="no-m"><small>{{ project.title }}</small></h4>
-                        <p>
-                            {{ project.description }}
-                        </p>
-                        <a href=""><div class="project-card-link">Learn more</div></a>
-                    </div>
-                    <div class="project-card-img">
-                        {% if project.image %}{% if project.image.url is not null %}<img src="{{ project.image.url }}" />{% endif %}{% endif %}
-                    </div>
-                </div>
-            {% else %}
-                <div class="project-card">
-                    <div class="project-card-img">
-                        {% if project.image %}{% if project.image.url is not null %}<img src="{{ project.image.url }}" />{% endif %}{% endif %}
-                    </div>
-                    <div class="project-card-text">
-                        <h2 class="no-m">{{ project.client }}</h2>
-                        <h4 class="no-m"><small>{{ project.title }}</small></h4>
-                        <p>
-                            {{ project.description }}
-                        </p>
-                        <a href=""><div class="project-card-link">Learn more</div></a>
-                    </div>
-                </div>
-            {% endif %}
-            
-
-            {% if forloop.last %}
+    <!-- START SECTION 4 -->
+    <div class="page page-padded full-height" id="projects-section">
+        <div class="full-width text-center p-t-xxl" id="projects-title">
+            <h1 class="no-m">Recent Work</h1>
+            <h5 class="m-t-xxl">
+                Still not sure? Take a look at how we've helped some of our previous clients.
+            </h5>
+        </div>
+        <div class="project-cards flex-y center-content-y">
+            {% for project in projects %}
                 {% if forloop.counter|divisibleby:2 %}
                     <div class="project-card">
-                        <div class="project-card-img">
-                            <img src="{% static 'img/byite-logo-color.svg' %}" />
-                        </div>
                         <div class="project-card-text">
-                            <h2 class="no-m">Could be you?</h2>
+                            <h2 class="no-m">{{ project.client }}</h2>
+                            <h4 class="no-m"><small>{{ project.title }}</small></h4>
                             <p>
-                                Something about contact us
+                                {{ project.description }}
                             </p>
-                            <a href=""><div class="project-card-link">Contact Us</div></a>
+                            <a href=""><div class="project-card-link">Learn more</div></a>
+                        </div>
+                        <div class="project-card-img">
+                            {% if project.image %}{% if project.image.url is not null %}<img src="{{ project.image.url }}" />{% endif %}{% endif %}
                         </div>
                     </div>
                 {% else %}
                     <div class="project-card">
-                        <div class="project-card-text">
-                            <h2 class="no-m">Could be you?</h2>
-                            <p>
-                                Something about contact us
-                            </p>
-                            <a href=""><div class="project-card-link">Contact Us</div></a>
-                        </div>
                         <div class="project-card-img">
-                            <img src="{% static 'img/byite-logo-color.svg' %}" />
+                            {% if project.image %}{% if project.image.url is not null %}<img src="{{ project.image.url }}" />{% endif %}{% endif %}
+                        </div>
+                        <div class="project-card-text">
+                            <h2 class="no-m">{{ project.client }}</h2>
+                            <h4 class="no-m"><small>{{ project.title }}</small></h4>
+                            <p>
+                                {{ project.description }}
+                            </p>
+                            <a href=""><div class="project-card-link">Learn more</div></a>
                         </div>
                     </div>
                 {% endif %}
-            {% endif %}
-        {% endfor %}
+                
+
+                {% if forloop.last %}
+                    {% if forloop.counter|divisibleby:2 %}
+                        <div class="project-card">
+                            <div class="project-card-img">
+                                <img src="{% static 'img/byite-logo-color.svg' %}" />
+                            </div>
+                            <div class="project-card-text">
+                                <h2 class="no-m">Could be you?</h2>
+                                <p>
+                                    Something about contact us
+                                </p>
+                                <a href=""><div class="project-card-link">Contact Us</div></a>
+                            </div>
+                        </div>
+                    {% else %}
+                        <div class="project-card">
+                            <div class="project-card-text">
+                                <h2 class="no-m">Could be you?</h2>
+                                <p>
+                                    Something about contact us
+                                </p>
+                                <a href=""><div class="project-card-link">Contact Us</div></a>
+                            </div>
+                            <div class="project-card-img">
+                                <img src="{% static 'img/byite-logo-color.svg' %}" />
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+        </div>
     </div>
+    <!-- END SECTION 4 -->
+
+
+    <!-- SECTION 5 -->
+    <div class="page page-padded col-2 col-1-sm vh-90" id="contact-section">
+        <div>
+            
+        </div>
+        <div class="contact-form">
+            <form id="contact-us-form" action="{% url 'contact-us' %}" method="POST">
+                {% csrf_token %}
+                <h1>Contact us</h1>
+                <div class="input-container">
+                    <input class="input-field" type="text" placeholder="Name" name="name" required/>
+                    <i class="fa fa-user-o fa-input-icon"></i>
+                </div>
+                <div class="input-container">
+                    <input class="input-field" type="text" placeholder="Email" name="email" required/>
+                    <i class="fa fa-envelope-o fa-input-icon"></i>
+                </div>
+                <div class="input-container">
+                    <input class="input-field" type="text" placeholder="Phone" name="phone"/>
+                    <i class="fa fa-mobile fa-input-icon"></i>
+                </div>
+                <div class="input-container">
+                <select class="input-field select-field" name="service" style="background-image: url('{% static 'img/select-icon.svg'%}');" required>
+                        <option disabled selected>What service are you looking for</option>
+                        <option value="front-end-web-development">Custom Web Development (front end only)</option>
+                        <option value="full-stack-web-development">Custom Web App Development (full stack)</option>
+                        <option value="back-end-development">Back-end Development</option>
+                        <option value="cloud-development">Custom cloud infrastructure</option>
+                        <option value="website-server-maintenance">Website/Server maintenance</option>
+                    </select>
+                </div>
+                <div class="input-container">
+                    <textarea class="input-field" placeholder="Message" name="message" rows="5"></textarea>
+                    <!--<input class="input-field" type="text" placeholder="Message" name="message"/>-->
+                    <i class="fa fa-comments-o fa-input-icon center-self-y"></i>
+                </div>
+                <div class="w-100 flex-end-content-x">
+                    <input class="form-submit" type="submit" title="Submit" name="contact-submit"/>
+                </div>
+            </form>
+        </div>
+        <div id="contact-bg-container">
+            <img class="bg-image" src="{% static 'img/contact-us-new.svg' %}"/>
+        </div>
+    </div>
+    <!-- END SECTION 5 -->
 </div>
-<!-- END SECTION 4 -->
-
-
-<!-- SECTION 5 -->
-<div class="page col-2 col-1-sm full-height" id="contact-section">
-    <div class="contact-form-graphic center-content-x center-content-y hidden-sm">
-        <img src="{% static 'img/contact-person.svg' %}"/>
-    </div>
-    <div class="contact-form">
-        <form id="contact-us-form" action="{% url 'contact-us' %}" method="POST">
-            {% csrf_token %}
-            <h1>Contact us</h1>
-            <div class="input-container">
-                <input class="input-field" type="text" placeholder="Name" name="name"/>
-                <i class="fa fa-user-o fa-input-icon"></i>
-            </div>
-            <div class="input-container">
-                <input class="input-field" type="text" placeholder="Email" name="email"/>
-                <i class="fa fa-envelope-o fa-input-icon"></i>
-            </div>
-            <div class="input-container">
-                <input class="input-field" type="text" placeholder="Phone" name="phone"/>
-                <i class="fa fa-mobile fa-input-icon"></i>
-            </div>
-            <div class="input-container">
-                <textarea class="input-field" placeholder="Message" name="message" rows="5"></textarea>
-                <!--<input class="input-field" type="text" placeholder="Message" name="message"/>-->
-                <i class="fa fa-comments-o fa-input-icon center-self-y"></i>
-            </div>
-            <div class="input-container">
-                <input class="form-submit w-100" type="submit" title="Submit" name="contact-submit"/>
-            </div>
-        </form>
-    </div>
-</div>
-<!-- END SECTION 5 -->
-
 {% endblock content %}
